ALLU-85: Call model-service only when there is something to add
Don't call addToAnonymizableApplications() when there are no
new anonymizable applications to add